# fdn_opt

./: .gitignore  CMakeLists.txt  CMakePresets.json  fetch_deps.cmake
app/: CMakeLists.txt  config.toml  main.cpp  tuning.cpp  tuning.py  utils.h
cmake/: llvm-toolchain.cmake  msvc-toolchain.cmake  project-options.cmake  project-warnings.cmake
include/fdn_opt/: audio_loss.h  loss.h  model.h  optim_types.h  optimizer.h
include/myproject/: foo.h
matlab/: ReadFDNConfig.m  SparsityLoss.m  check_rms.asv  check_rms.m  compare_audio.m  compare_edc.m  compare_ir.asv  compare_ir.m  compare_modes.asv  compare_modes.m
src/: CMakeLists.txt  audio_loss.cpp  foo.cpp  loss.cpp  model.cpp  optimizer.cpp  random_searcher.cpp  random_searcher.h
